--- a/phamacyapp/pubspec.yaml
+++ b/phamacyapp/pubspec.yaml
@@ -35,6 +35,8 @@ flutter:
   assets:
      - assets/icon/ya.png
      - assets/icon/ya2.png
+     - assets/medication.png
+     - assets/medication.png
 
 
 cupertino_icons: ^0.1.2  
